ManifestFiles/Deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: bpcalculator
  labels:
    app: bpcalculator
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
  selector:
    app: bpcalculator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-blue
  labels:
    app: bpcalculator
    deployment: blue
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bpcalculator
      deployment: blue
      version: v1
  template:
    metadata:
      labels:
        app: bpcalculator
        deployment: blue
        version: v1
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: backend-blue
        image: docker.io/x00113281/flask-server-blue:latest
        ports:
        - containerPort: 80
          name: backend-blue
---
apiVersion: v1
kind: Service
metadata:
  name: backend-blue
spec:
  ports:
    - port: 80
  selector:
    app: bpcalculator
    deployment: blue
    version: v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-blue
  labels:
    app: bpcalculator
    deployment: blue
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bpcalculator
      deployment: blue
      version: v1
  template:
    metadata:
      labels:
        app: bpcalculator
        deployment: blue
        version: v1
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: frontend-blue
        image: docker.io/x00113281/flask-ui-blue:latest
        ports:
        - containerPort: 80
          name: backend-blue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-green
  labels:
    app: bpcalculator
    deployment: green
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bpcalculator
      deployment: green
      version: v2
  template:
    metadata:
      labels:
        app: bpcalculator
        deployment: green
        version: v2
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: backend-green
        image: docker.io/x00113281/flask-server-green:latest
        ports:
        - containerPort: 80
          name: backend-green
---
apiVersion: v1
kind: Service
metadata:
  name: backend-green
spec:
  ports:
    - port: 80
  selector:
    app: bpcalculator
    deployment: green
    version: v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green
  labels:
    app: bpcalculator
    deployment: green
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bpcalculator
      deployment: green
      version: v2
  template:
    metadata:
      labels:
        app: bpcalculator
        deployment: green
        version: v2
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: frontend-green
        image: docker.io/x00113281/flask-ui-green:latest
        ports:
        - containerPort: 80
          name: backend-green
