ManifestFiles/bpcalculator-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bpcalculator-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bpcalculator
spec:
  host: bpcalculator
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bpcalculator
spec:
  hosts:
  - "*"
  gateways:
  - bpcalculator-gateway
  http:
    - route:
      - destination:
          host: bpcalculator
          subset: v1
